# train-catcher

./: .env-example  .gitignore  DOCKER.md  Dockerfile  README.md  check_trains.py  config.py  database.py  docker-compose.yml  example.py  pyproject.toml  requirements.txt  test_stomp.py  train_manager.py
data/: trains.db
examples/: example.py  test_stomp.py
includes/: config.py  database.py  listener.py  train_manager.py  trust.py
static/: index.html  style.css  trains.js
utils/: td.py  trust.py
