[project]
name = "train-catcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "stomp-py>=8.2.0",
]

[tool.ruff.format]
indent-width = 2
quote-style = "single"
